# claw

./: .gitignore
smartclaw/: .env.example  .gitignore  DEPENDENCY_AUDIT_REPORT.md  FINAL_SECURITY_REPORT.md  Makefile  PROJECT_HEALTH_REPORT.md  README.md  REMEDIATION_PLAN_CURRENT.md  REMEDIATION_PLAN_GENERATED.md  SECURITY_AUDIT_REPORT.md  SECURITY_CHECK_REPORT_FINAL.md  SECURITY_INSPECTION_REPORT.md  SECURITY_REMEDIATION_EXECUTION_REPORT.md  SECURITY_REMEDIATION_EXECUTION_REPORT_FINAL.md  SECURITY_REMEDIATION_FINAL_REPORT.md  SECURITY_REMEDIATION_PLAN.md  SECURITY_REMEDIATION_REPORT.md  pyproject.toml  restart.sh  start.sh  stop.sh  test_cli_cross_scenarios.py  test_cli_scenarios.py  test_e2e_tools.py  test_e2e_web_fetch.py  test_full_integration.py
smartclaw/.github/: dependabot.yml
smartclaw/.github/workflows/: security.yml
smartclaw/.hypothesis/constants/: 00bf11db8fd1813c  025d62d529cf9604  035b1937235d8bee  09901d4625f19cfc  0bb2967f5e12d03d  0c60b495ff9f13cc  0d05213e9f59e98f  139b4d9c66c350be  16b45f1706331291  198e32a606324af8  1a3893c60e9e826f  1a72c29febbbcbd4  1bc57b4b572dbdae  1ddb3217a925902d  20132a9aa5001cef  2137f68a9379764e  23d16b8645ccb55e  23e92ee9eb6c6aa8  26e126d7c4e5007e  2790a99b8d01192d  27c3823eb1c8f538  2881c729a4c72417  28846f8ad516254f  29704aad7b448585  2bc2041786dfbe0a  2cd86aae7b88e60e  2ed6603ea08ab952  31204d605b4f6168  3342506430248bbf  341684b0baecb191  35041a7c20089df1  354236626e56c53c  3a579766500b750b  43fe8418257300d8  4f2780da698bf405  52210adcf811b0c6  524f2ff873efa900  52b7bdd1752f1149  52c9458b830623e0  5324b1a0b0e2541e  (+98 more)
smartclaw/capability_packs/security-governance/: manifest.yaml
smartclaw/config/: config.example.yaml
smartclaw/docs/: SMARTCLAW_ARTIFACT_SPEC.md  SMARTCLAW_CAPABILITY_PACK_SPEC.md  SMARTCLAW_DEERFLOW_MECHANISM_REFACTOR.md  SMARTCLAW_DESIGN_INDEX.md  SMARTCLAW_DESIGN_OPTIMIZATION.md  SMARTCLAW_DYNAMIC_ORCHESTRATION_BLUEPRINT.md  SMARTCLAW_DYNAMIC_ORCHESTRATION_FRAMEWORK.md  SMARTCLAW_IMAGE_ANALYSIS_DESIGN.md  SMARTCLAW_ORCHESTRATOR_DETAILED_DESIGN.md  SMARTCLAW_PACK_STEP_BINDING_SPEC.md  SMARTCLAW_PLANNER_INPUT_RESOLUTION_SPEC.md  SMARTCLAW_RUNTIME_STATE_OBSERVABILITY_SPEC.md  SMARTCLAW_STEP_REGISTRY_SPEC.md  SMARTCLAW_UNIFIED_DYNAMIC_ORCHESTRATION_DESIGN.md  SMARTCLAW_UPLOAD_ANALYSIS_DESIGN.md
smartclaw/smartclaw/: __init__.py  cli.py  credentials.py  main.py  serve.py
smartclaw/smartclaw/agent/: __init__.py  artifact_store.py  (+17 more)
smartclaw/tests/: __init__.py  conftest.py  test_backward_compat.py  test_cli_runtime.py  test_cli_runtime_props.py  test_config_loader.py  test_credentials.py  test_e2e_agent.py  test_e2e_p1_llm.py  test_e2e_p1_modules.py  test_logging.py  test_main.py  test_p1_backward_compat.py  test_runtime_consistency.py
(+1492 files in other folders)
