[project]
name = "smartclaw"
version = "0.1.0"
description = "SmartClaw — Production-grade AI Agent for browser automation"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "structlog>=24.1.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "keyring>=25.0.0",
    "httpx>=0.27.0",
    "langgraph>=0.4",
    "langchain-openai",
    "langchain-anthropic",
    "playwright>=1.40.0",
    "tavily-python>=0.3.0",
    "mcp>=1.9",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "sse-starlette>=2.0.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.4.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "hypothesis>=6.98.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "tavily.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: tests that require real network access (web_search, web_fetch)",
    "e2e: agent-level E2E tests requiring LLM API keys (skip with: -m 'not e2e')",
    "browser: browser E2E tests requiring Playwright Chromium (--run-browser)",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
